<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.movie.FavoriteMovieFragment">

    <ProgressBar
        android:id="@+id/favorite_movie_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/rv_favorite_movie"
        app:layout_constraintEnd_toEndOf="@+id/rv_favorite_movie"
        app:layout_constraintTop_toTopOf="@+id/rv_favorite_movie"
        app:layout_constraintStart_toStartOf="@+id/rv_favorite_movie"
        android:layout_marginStart="8dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_favorite_movie"
        android:layout_gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>